# movie-shop

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: pylint-and-docker-build.yml
app/: crud.py  db.py  main.py  models.py  schemas.py
