[tool.poetry]
name = "movie-shop"
version = "0.1.0"
description = ""
authors = ["BrankoGeorgiev <branko.georgiev@students.finki.ukim.mk>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
gunicorn = "^20.1.0"
SQLAlchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.34.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
